--- a/wp-content/themes/neve-child/style.scss
+++ b/wp-content/themes/neve-child/style.scss
@@ -12,6 +12,8 @@ Tags: two-columns, responsive-layout
 Text Domain: neve-child
 */
 
+$error-color: red;
+
 h1, h2, h3, h4, h5, h6{
   clear:both;
 }
@@ -32,4 +34,12 @@ p{
 
 .header-menu-sidebar .nav-menu-primary ul li{
   text-align:left;
+}
+
+.error{
+  color: $error-color;
+}
+
+.has-error{
+  border: $error-color 1px solid;
 }
