--- a/wp-content/themes/neve-child/style.css
+++ b/wp-content/themes/neve-child/style.css
@@ -26,10 +26,36 @@ p {
 .header-menu-sidebar .nav-menu-primary ul li {
   text-align: left; }
 
-.error {
+.error, .error a {
   color: red; }
 
 .has-error {
   border: red 1px solid; }
+
+.on-page .nv-comment-content {
+  font-size: 1.25em; }
+.on-page .nv-comment-content:before {
+  content: open-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  position: relative;
+  top: .4em;
+  color: #ccc;
+  font-size: 3em;
+  font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif; }
+.on-page .nv-comment-content:after {
+  content: close-quote;
+  display: inline;
+  height: 0;
+  line-height: 0;
+  position: relative;
+  top: .4em;
+  color: #ccc;
+  font-size: 3em;
+  font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text, Times New Roman, serif; }
+.on-page .nv-comment-header, .on-page .nv-comment-header .comment-author {
+  display: block;
+  clear: both; }
 
 /*# sourceMappingURL=style.css.map */
