--- a/wp-content/themes/neve-child/style.css
+++ b/wp-content/themes/neve-child/style.css
@@ -32,6 +32,9 @@ p {
 .has-error {
   border: red 1px solid; }
 
+.entry-content p {
+  max-width: 42em; }
+
 .on-page .nv-comment-content {
   font-size: 1.25em; }
 .on-page .nv-comment-content:before {
