setting max width to match image in pixels

--- a/wp-content/themes/neve-child/style.css
+++ b/wp-content/themes/neve-child/style.css
@@ -33,7 +33,7 @@ p {
   border: red 1px solid; }
 
 .entry-content p {
-  max-width: 42em; }
+  max-width: 769px; }
 
 .on-page .nv-comment-content {
   font-size: 1.25em; }
