--- a/wp-content/themes/neve-child/style.css
+++ b/wp-content/themes/neve-child/style.css
@@ -81,10 +81,8 @@ dd:before {
 dd:after {
   content: "\0029"; }
 
-/*
-#nv-primary-navigation-main, .menu-mobile-toggle{
-  display: none;
-}
-*/
+#comments .form-submit {
+  justify-content: flex-start;
+  display: flex; }
 
 /*# sourceMappingURL=style.css.map */
